--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 pyrogram==2.0.106
 tgcrypto==1.2.5
+aiohttp==3.9.3
+aiofiles==23.2.1
 pymongo==4.6.1
-requests==2.31.0
-ffmpeg-python==0.2.0
 python-dotenv==1.0.1
-aiohttp==3.9.5
+ffmpeg-python==0.2.0
+m3u8==3.7.0
