--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-BOT_TOKEN=your_telegram_bot_token
-API_ID=your_pyrogram_api_id
-API_HASH=your_pyrogram_api_hash
-MONGO_URI=your_mongodb_connection_string
-ADMIN_IDS=123456789,987654321
-WEBHOOK_URL=https://your-koyeb-app.koyeb.app
-PORT=8080
+API_ID=123456
+API_HASH=your_api_hash
+BOT_TOKEN=your_bot_token
+ADMIN_IDS=123456789
+WEBHOOK_URL=https://your-app-name.koyeb.app
+WEBHOOK_PORT=8080
+MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/dbname
